<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dog Trailing</string>
    <string name="action_search">Search</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_add">Add</string>
    <string name="title_activity_create">Create a new Session</string>
    <string name="enter_session_title">Enter Title</string>
    <string name="enter_creation">Enter trail layed</string>
    <string name="enter_searched">Enter trail searched</string>
    <string name="enter_note">Enter notes</string>
    <string name="enter_location">Enter location</string>
    <string name="service_not_available">Service not available!</string>
    <string name="invalid_lat_long_used">Invalid location used (Lat / Long)</string>
    <string name="no_address_found">No address found!</string>
    <string name="address_found">Address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_geocoder_available">Geocoder is not available for some reason!</string>


    <string name="google_api_client_connection_failed">Connecting GoogleApiClient failed! ErrorCode=%1$d</string>
    <string name="google_api_client_connection_suspended">GoogleApiClient connection suspended. Caused by: %1$s. Waiting for reconnection.</string>
    <string name="no_location_provided_for_address">No location provided to retrieve address for!</string>
    <string name="enable_location_services_title">Change location settings?</string>
    <string name="enable_location_services_message">To use location services, you have to change your device settings.</string>
    <string name="datetime_picker_cancel">Cancel</string>
    <string name="activate">Activate</string>
    <string name="action_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="datetime_picker_set">Set</string>
    <string name="tag_category_start">Start</string>
    <string name="tag_category_corners">Corners</string>
    <string name="tag_category_distractions">Distractions</string>
    <string name="tag_category_search">Search</string>
    <string name="tag_category_overall">Dog Overall</string>
    <string name="tag_category_handler">Dog Handler</string>
    <string name="tag_start_ok">OK</string>
    <string name="tag_start_too_fast">Too Fast</string>
    <string name="tag_start_too_slow">Too Slow</string>
    <string name="tag_start_stuck">Stuck</string>
    <string name="tag_start_uninterested">Uninteressted</string>
    <string name="tag_corners_ok">OK</string>
    <string name="tag_corners_circling">Circling</string>
    <string name="tag_corners_overrunning">Overrunning</string>
    <string name="tag_corners_high_nose">High Nose</string>
    <string name="tag_corners_stuck">Stuck</string>
    <string name="tag_search_ok">OK</string>
    <string name="tag_search_too_fast">Too Fast</string>
    <string name="tag_search_too_slow">Too Slow</string>
    <string name="tag_search_exact_on_ontrack">Exact on Track</string>
    <string name="tag_search_in_the_wind">In the Wind</string>
    <string name="tag_search_bored">Bored</string>
    <string name="tag_overall_ok">OK</string>
    <string name="tag_overall_hectic">Hectic</string>
    <string name="tag_overall_varying_speed">Varying Speed</string>
    <string name="tag_overall_unconcentrated">Unconcentrated</string>
    <string name="tag_overall_bored">Bored</string>
    <string name="tag_overall_distracted">Distracted</string>
    <string name="tag_overall_bad_shape">Bad Shape</string>
    <string name="tag_handler_uncertain">Uncertain</string>
    <string name="tag_handler_concentrated">Concentrated</string>
    <string name="tag_handler_bored">Bored</string>
    <string name="tag_distractions_accepted">Accepted</string>
    <string name="tag_distractions_not_accepted">Not Accepted</string>
    <string name="tag_distractions_searches_back">Searches Back</string>
    <string name="tag_distractions_searches_support">Searches Support</string>
    <string name="tag_distractions_stuck">Stuck</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_tag_list">Tags</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

</resources>
