<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.wildsau.dogtrailing.edit.EditSessionActivity">

    <EditText
        android:id="@+id/session_title_edit"
        android:hint="@string/enter_session_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:drawable/divider_horizontal_bright" />


    <GridLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center_horizontal|top"
            android:layout_rowSpan="2"
            android:src="@drawable/ic_action_event" />

        <EditText
            android:id="@+id/creation_edit"
            android:focusable="false"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/enter_creation"
            android:onClick="pickCreatedDateTime"
            style="@style/PickerEditText" />

        <EditText
            android:id="@+id/searched_edit"
            android:focusable="false"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/enter_searched"
            android:onClick="pickSearchedDateTime"
            style="@style/PickerEditText" />
    </GridLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@android:drawable/divider_horizontal_bright" />

    <GridLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/ic_action_place" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/location_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_location" />

            <ImageView
                android:id="@+id/location_determine_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="determineLocation"
                android:src="@drawable/ic_action_location_found" />

            <ProgressBar
                android:id="@+id/location_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowSpan="3"
            android:src="@drawable/ic_action_paste" />

        <Spinner
            android:id="@+id/search_behaviour_spinner"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/note_edit"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:lines="3"
            android:hint="@string/enter_note" />

        <RatingBar
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="2.5" />

    </GridLayout>
</LinearLayout>
